--- a/static/style.css
+++ b/static/style.css
@@ -13,10 +13,10 @@
 body {
     background-color: #FFFFFF;
     background-image: url('/static/c150lion1.png');
-    background-repeat: no-repeat;
-    background-position: bottom right;
+    background-repeat: repeat;
+    background-position: 0 0;
     background-attachment: fixed;
-    background-size: 200px;
+    background-size: 80px;
     color: #333333;
     line-height: 1.5;
     padding: 1rem;
@@ -25,7 +25,7 @@ body {
     min-height: 100vh;
 }
 
-/* Starfield overlay effect */
+/* Semi-transparent overlay for lion pattern */
 body::before {
     content: '';
     position: fixed;
@@ -33,12 +33,7 @@ body::before {
     left: 0;
     right: 0;
     bottom: 0;
-    background-image: 
-        radial-gradient(#4499D9 1px, transparent 1px),
-        radial-gradient(#4499D9 1px, transparent 1px);
-    background-size: 50px 50px, 30px 30px;
-    background-position: 0 0, 25px 25px;
-    opacity: 0.05;
+    background: rgba(255, 255, 255, 0.92);
     pointer-events: none;
     z-index: -1;
 }
@@ -668,7 +663,7 @@ label {
 
 @media (max-width: 480px) {
     body {
-        background-size: 120px;
+        background-size: 60px;
     }
     
     .member-grid {
